# tradingTOT

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/trading121/: constants.py  endpoints.py  enums.py  exceptions.py  trading212.py
src/trading121/schemas/: api_responses.py
src/trading121/utils/: browser_utils.py  cache.py
src/trading212/: __init__.py  browser_utils.py  endpoints.py  enums.py  exceptions.py  existing_orders.py  trading212.py
src/trading212/schemas/: api_responses.py
src/tradingTOT/: __init__.py  constants.py  endpoints.py  exceptions.py  existing_orders.py  tradingTOT.py
src/tradingTOT/schemas/: api_responses.py
src/tradingTOT/utils/: browser.py  browser_utils.py  cache.py  pathfinder.py  storage.py
tests/: conftest.py
tests/fixtures/: test.env
tests/integration/: test_login.py  test_trade.py
