[tool.poetry]
name = "trading121"
version = "0.1.0"
description = "A selenium-based Python package for interacting with the Trading212 stock trading platform."
authors = ["Habeeb Shopeju <shopejuh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
poethepoet = "^0.24.4"
selenium = "3.141.0"
requests = "2.31.0"
webdriver-manager = "3.8.6"
selenium-stealth = "^1.0.6"
pydantic = "^2.5.2"
urllib3 = "1.26.18"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test.shell = "pytest tests"
test.env = {PYTHONPATH = "."}
