[tool.poetry]
name = "tradingTOT"
version = "0.1.0"
description = "A selenium-based Python package for interacting with the Trading212 stock trading platform."
authors = ["Habeeb Shopeju <shopejuh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tradingTOT", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
poethepoet = "^0.24.4"
selenium = "4.11.2"
requests = "2.31.0"
selenium-stealth = "^1.0.6"
pydantic = "^2.5.2"
urllib3 = "1.26.18"
pytest-order = "^1.2.0"
tenacity = "^8.2.3"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test.shell = "pytest tests"
test.env = {PYTHONPATH = "."}

